--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,11 +57,11 @@ body {
   
   
   #mis-trabajos .image-top {
-    height: 250px;
+    height: 300px;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    border-radius: 2rem;
+    border-radius: 1.5rem;
   }
   
   
@@ -82,5 +82,12 @@ body {
     }
   
   }
+
+  #galeria{
+    text-align: center;
+
+  }
+
+
   
 
